sshdw/iptables_rules

#fix plz

# Generated by iptables-save v1.8.7 on Fri Jul 16 22:17:16 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i ppp0 -p tcp -m tcp --dport 22 -j DNAT --to-destination 192.168.1.106
-A PREROUTING -i ppp0 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 192.168.1.107:80
-A POSTROUTING -s 192.168.1.102/24 -o ppp0 -j MASQUERADE

COMMIT
# Completed on Fri Jul 16 22:17:16 2021
# Generated by iptables-save v1.8.7 on Fri Jul 16 22:17:16 2021
# AUTHPOR mbyshadow@protonmail.com

*filter

:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
:fw-interfaces - [0:0]
:fw-open - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p ipv6 -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -m recent --set --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable

-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j fw-interfaces
-A FORWARD -j fw-open
-A FORWARD -j REJECT --reject-with icmp-host-unreachable
-A TCP -p tcp -m recent --update --seconds 60 --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A TCP -p tcp -m tcp --dport 22 -j DROP

-A TCP -p tcp -m tcp --dport 80 -j DROP 
#-A TCP -p tcp -m tcp --dport 80 -j ACCEPT

-A TCP -p tcp -m tcp --dport 443 -j DROP 
#-A TCP -p tcp -m tcp --dport 443 -j ACCEPT 
-A TCP -p tcp -m tcp --dport 5355 -j DROP

-A UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
-A fw-interfaces -i enp3s0 -j ACCEPT

#-A fw-open -d 192.168.1.105/32 -p tcp -m tcp --dport 22 -j ACCEPT
#-A fw-open -d 192.168.1.106/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A fw-open -d 192.168.1.105/32 -p tcp -m tcp --dport 22 -j DROP
-A fw-open -d 192.168.1.106/32 -p tcp -m tcp --dport 80 -j DROP

COMMIT
# Completed on Fri Jul 16 22:17:16 2021
